2010-09-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Update module
	  configuration from XML data files.

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Improved the last feature
	of CLI deleting the modules of all conf files of 
	the incoming directory now

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the deletion
	of all modules without policy from config file

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the deletion 
	of module from conf files when is local module

2010-09-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not execute alerts in stand-by.

2010-09-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Core.pm: Fixed some prototypes that led to warnings
	  in recent versions of PERL. This fixes bug #3061906.

2010-09-09  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert behaviour when time_from is
	  greater than time_to. Fixes bug #3048043.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* util/compaq_chassis_trap_manager.pl,
	util/esx_trap_manager.pl: First official external trap handlers.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/SNMPServer.pm
	lib/PandoraFMS/Core.pm: SNMP Trap console doesnt send trap value to
	alert function. Now does :-)

2010-09-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the option of
	delete historic data from module, agent modules or
	group agents modules

2010-09-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_db.pl: Added a delete buffer to the delete of 
	the pending_delete modules

2010-08-29  Raúl Mateos   <raulofpandora@gmail.com>

	* util/tentacle_serverd: Use same message texts format as Pandora Server.

2010-08-18  Sancho Lerena <slerena@artica.es>
